adhocracy Changelog
===================

1.2beta2dev
-----------

- New config option "adhocracy.listings.instance.sorting" that makes
  the sort options for the instance listing configurable. This
  possible values are: OLDEST, NEWEST, ACTIVITY and ALPHA. [csenger]

- Permission change: When we test the 'norm.create' permission 
  (permission to create Norms/Topics/Themen we do no longer
  restrict it to users who also have 'instance.admin'. The main
  permission we check now is 'page.create'.

  Please check the permission 'page.create' in your permission 
  settings (<base_url>/admin -> Permissions). [csenger]
- Give the users the option to permanently activate the twitter, 
  facebook or google+ buttons. Save the setting in a wildcard 
  subdomain cookie so it is valid across all instances.

  This requires a updated js.socialshareprivacy to work with
  our auth cookie. [csenger]
- Add the possibility to overwrite templates in <adhocracy.site>/templates 
  directory (like it's possible for static resources and static pages already.
  New templates there need a server restart to be picked up.
  [csenger]
- Deliver (almost) all resources with fanstatic. [csenger] 
- Delgateables can have category badgets. [joka]
- Instances can have badgets, they are only valid inside that instance. [joka]
- Added option to set the smtp port. [joka]

1.2a4
-----

- Tooltips use jquery tools now. [joka]
- Open helper link, login and register form with overlay. [joka]
- Recaptcha support (disabled by default). [joka]
- Proposals can have badgets #263. [joka]


1.2a3 
-----

1.2a2 
------

1.2a1
-----

- Users can have badgets #214. [carsten]
- Proposal listing with natural sort #212. [joka]

1.1 (2010-12-05)
----------------

- Join "Goal" and "Implementation" pages on proposals.
- Migrate from whoosh to solr.
- Allow single-instance mode of operation.
- Allow per-instance deactivation of norms. 
- Remove wiki from system.
- Change from cron-initiated regular background processing.